package com.pokedex.bff.domain.model

data class EvolutionChain(
    val id: Long,
    val chainData: String?
)
