//package com.pokedex.bff.models
//
//import jakarta.persistence.*
//
//@Entity
//@Table(name = "abilities")
//data class Ability(
//    @Id
//    val id: Int,
//
//    @Column(nullable = false)
//    val identifier: String,
//
//    @Column(name = "generation_id", nullable = false)
//    val generationId: Int,
//
//    @Column(name = "is_main_series", nullable = false)
//    val isMainSeries: Boolean
//)
